@@ -1,15 +1,15 @@
 #define RUBY_VERSION "1.8.7"
-#define RUBY_RELEASE_DATE "2009-07-08"
+#define RUBY_RELEASE_DATE "2009-07-09"
 #define RUBY_VERSION_CODE 187
-#define RUBY_RELEASE_CODE 20090708
-#define RUBY_PATCHLEVEL 180
+#define RUBY_RELEASE_CODE 20090709
+#define RUBY_PATCHLEVEL 181
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
 #define RUBY_VERSION_TEENY 7
 #define RUBY_RELEASE_YEAR 2009
 #define RUBY_RELEASE_MONTH 7
-#define RUBY_RELEASE_DAY 8
+#define RUBY_RELEASE_DAY 9
 
 #ifdef RUBY_EXTERN
 RUBY_EXTERN const char ruby_version[];
